Development/src/index.css
body {
  margin: 0;
  padding: 0;
  font-family: sans-serif;
  overflow-y:scroll;
}

.icon {
  width: 10px;
  height: 15px;
  background: grey;
  position: absolute;
}

.search {
  width: 150px;
  max-width:0px;
  padding: 5px;
  padding-right: 145px;
  position:absolute;
  box-sizing:border-box;
  left:0px;
  opacity:0;
  visibility: hidden;
}

.search.expanded {
  padding-right: 5px;
  max-width:150px;
  opacity:1;
  left: 0px;
  visibility: visible;
}

.addFilter.blue{
  color: rgb(33, 150, 243);
}

.inverted {
  filter: invert(100%);
  -webkit-filter: invert(100%);
  -moz-filter: invert(100%);
  -o-filter: invert(100%);
  -ms-filter: invert(100%);
  }

hr {
  margin: 0;
  border: 0;
  border-top: 1px solid rgba(0, 0, 0, 0.12);
}

::placeholder {
  color: rgba(0, 0, 0, 0.33);
}

.MuiButton-root-160 {
  text-transform: none;
}

i.icon-external {
  content:url('../node_modules/@material-ui/icons/OpenInNew.js')
}

